Updated examples to the latest build. b30